Mon Feb  1 23:25:35 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * NEWS:

          Updated with new reliable transport teardown details.

Mon Feb  1 22:31:50 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          - Made the header_block_ released before it was created again
          - Increased header_chunks to be 2.
          These fixed the memory leaks seen in a stress test that sends
          large number of messages without delay.

Mon Feb  1 21:18:58 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Initialize WriterInfo::seen_data_ in the 2-arg constructor.

Mon Feb  1 18:55:50 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:

          Added missing initializer for cancelled_ member.

Mon Feb  1 16:50:50 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Removed bogus acked_ check for passive peers.

Mon Feb  1 16:13:15 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * docs/html/README:

          Added instructions to create new documents.  This includes
          copying the 'images' subdirectory to reflect some changes in
          the template.html.  Added instructions to publish document as
          static HTML pages.

        * docs/html/template/template.html:

          - changed the path to the 'opendds.png' logo to be in the local
            'images' directory to remove a dependency on the '../template'
            directory.
          - added the 'PublishMacro' plugin to allow publication of the
            TiddlyWiki document as separate static HTML pages.

Mon Feb  1 15:34:10 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
