@@ -1,3 +1,9 @@
+Mon Feb  1 23:47:09 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
+
+          Updated pre-allocated chunks for header blocks.
+
 Mon Feb  1 23:25:35 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * NEWS:
